--- a/gradle.properties
+++ b/gradle.properties
@@ -44,9 +44,9 @@ mapping_version=2023.09.03-1.20.1
 # Must match the String constant located in the main mod class annotated with @Mod.
 mod_id=banhammer
 # The human-readable display name for the mod.
-mod_name=MIT
+mod_name=Ban Hammer
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
-mod_license=All Rights Reserved
+mod_license=MIT
 # The mod version. See https://semver.org/
 mod_version=1.20-2.1a
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
