--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
   - source: /src/main/resources/assets/banhammer/lang/en_us.json
-    translation: /main/resources/assets/banhammer/lang/%two_letters_code%.json
+    translation: /main/resources/assets/banhammer/lang/%locale_with_underscore%.json
